fix send button misalignment

--- a/sass/compose.scss
+++ b/sass/compose.scss
@@ -15,7 +15,7 @@
   margin-left: $compose-fix;    
 }
       
-.js-send-tweet-button {
+.js-send-button {
   margin-right: $compose-fix;    
 }
 
